--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 llm:
   # gpt-3.5-turbo or gpt-4
-  model: "gpt-3.5-turbo"
+  model: "gpt-4"
   # Only used for Azure OpenAI API
   azure_openai_endpoint:
   # Use only with an alternate OpenAI-compatible API endpoint
@@ -31,7 +31,7 @@ server:
   port: 8000
 auth:
   # Set to true to enable authentication
-  required: false
+  required: true
   # Do not use this secret in production. The ZEP_AUTH_SECRET environment variable should be
   # set to a cryptographically secure secret. See the Zep docs for details.
   secret: "do-not-use-this-secret-in-production"
